--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,26 +2,28 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.ui.main.MainActivity">
+    tools:context=".presentation.ui.listgames.MainActivity">
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.eidorian.rawgapigames.presentation.ui.main.MainViewModel" />
+            type="com.eidorian.rawgapigames.presentation.ui.listgames.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark">
 
-        <ProgressBar
-            android:id="@+id/loading_main"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_games"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            visible="@{viewModel.isLoading()}"/>
-        <TextView
-            android:id="@+id/tv_games"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
