--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,17 @@
             android:backgroundTint="@android:color/white"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/darker_gray"
-            android:hint="Cyberpunk 2077"/>
+            android:hint="@string/example_search_text"/>
+
+        <ProgressBar
+            android:id="@+id/loading_games"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            visible="@{viewModel.isLoading()}"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_games"
@@ -41,14 +51,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_search_game" />
+            app:layout_constraintTop_toBottomOf="@+id/et_search_game"
+            visible="@{!viewModel.isLoading()}"/>
 
         <Button
             android:id="@+id/bt_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="Button"
+            android:text="@string/bt_search"
             app:layout_constraintBottom_toBottomOf="@+id/et_search_game"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/et_search_game" />
